# cli_speeder

./: LICENSE  pyproject.toml
.github/workflows/: publish.yml
cli_speeder/: .gitignore  README.md  pyproject.toml
cli_speeder/src/cli_speeder/: __init__.py
cli_speeder/tests/: test_lazy.py
src/cli_speeder/: core.py
