[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cli-speeder"
version = "0.1.1"
description = "A dead-simple, zero-dependency lazy import proxy to make Python CLIs start instantly."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
  { name = "Your Name", email = "your.email@example.com" },
]
keywords = ["cli", "performance", "lazy-loading", "import", "speed"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/yourusername/cli-speeder"
Issues = "https://github.com/yourusername/cli-speeder/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/cli_speeder"]
